--- a/CSS/styles/card2.css
+++ b/CSS/styles/card2.css
@@ -50,3 +50,12 @@
 .lista__de__tarfas{
   margin-top: 4rem !important;
 }
+
+.container__results{
+  margin-top: 1rem;
+}
+
+.title__results{
+  font-size:1rem;
+}
+
